# polls-site

./: .coderabbit.yml  .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  healthcheck.py  manage.py  pyproject.toml
.github/workflows/: build-and-push-image.yml  build-check.yml  ci-cd-pipeline.yml  ci-pipeline.yml  create_docker_image.yml  deploy-container.yml  deploy.yml  docker-build-and-push-image.yml  docker-build.yml  e2e-tests.yml  format-and-lint.yml  run-tests.yml
apps/polls/: admin.py  apps.py  models.py  views.py
apps/polls/migrations/: 0001_initial.py  0002_alter_choice_question.py
apps/polls/static/polls/css/: detail.css  index.css  results.css
apps/polls/templates/polls/: detail.html  index.html  results.html
apps/polls/tests/: helpers.py
apps/polls/tests/models/: test_question_model.py
apps/polls/tests/views/: test_detail_view.py  test_index_view.py  test_results_view.py  test_vote_view.py
config/: settings.py  urls.py  views.py
mysite/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
polls-site/: asgi.py  settings.py  urls.py  wsgi.py
src/: Dockerfile  pyproject.toml
tests/: conftest.py
tests/db/: conftest.py  test_db_connection.py
tests/e2e/: conftest.py  test_e2e.py  test_e2e_smoke.py
tests/unit/: conftest.py
